--- a/pkgsinfo/apps/VLC/VLC-2.2.2.plist
+++ b/pkgsinfo/apps/VLC/VLC-2.2.2.plist
@@ -7,7 +7,7 @@
 		<key>created_by</key>
 		<string>aanklewicz</string>
 		<key>creation_date</key>
-		<date>2016-02-01T16:03:48Z</date>
+		<date>2016-02-23T17:58:10Z</date>
 		<key>munki_version</key>
 		<string>2.4.0.2561</string>
 		<key>os_version</key>
@@ -21,36 +21,36 @@
 		<string>production</string>
 	</array>
 	<key>category</key>
-	<string>Internet Browsers</string>
+	<string>Multimedia</string>
 	<key>description</key>
-	<string>Mozilla Firefox is a free and open source web browser.</string>
+	<string>VLC is a free and open source cross-platform multimedia player and framework that plays most multimedia files as well as DVD, Audio CD, VCD, and various streaming protocols.</string>
 	<key>developer</key>
-	<string>Mozilla</string>
+	<string>The VLC Team</string>
 	<key>display_name</key>
-	<string>Mozilla Firefox</string>
+	<string>VLC Media Player</string>
 	<key>installer_item_hash</key>
-	<string>74f7d4041f2582553a460fd8249575dfc501b57bdee37f43083e8d7277d2d722</string>
+	<string>0a68188a9d193a4d4614d28366a052355289a064571b79d0890e045caba5384a</string>
 	<key>installer_item_location</key>
-	<string>apps/firefox/Firefox-44.0.dmg</string>
+	<string>apps/VLC/VLC-2.2.2.dmg</string>
 	<key>installer_item_size</key>
-	<integer>80548</integer>
+	<integer>35481</integer>
 	<key>installer_type</key>
 	<string>copy_from_dmg</string>
 	<key>installs</key>
 	<array>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>org.mozilla.firefox</string>
+			<string>org.videolan.vlc</string>
 			<key>CFBundleName</key>
-			<string>Firefox</string>
+			<string>VLC media player</string>
 			<key>CFBundleShortVersionString</key>
-			<string>44.0</string>
+			<string>2.2.2</string>
 			<key>CFBundleVersion</key>
-			<string>4416.1.23</string>
+			<string>2.2.2</string>
 			<key>minosversion</key>
-			<string>10.6</string>
+			<string>10.6.0</string>
 			<key>path</key>
-			<string>/Applications/Firefox.app</string>
+			<string>/Applications/VLC.app</string>
 			<key>type</key>
 			<string>application</string>
 			<key>version_comparison_key</key>
@@ -63,13 +63,17 @@
 			<key>destination_path</key>
 			<string>/Applications</string>
 			<key>source_item</key>
-			<string>Firefox.app</string>
+			<string>VLC.app</string>
 		</dict>
 	</array>
 	<key>minimum_os_version</key>
-	<string>10.6</string>
+	<string>10.6.0</string>
 	<key>name</key>
-	<string>Firefox</string>
+	<string>VLC</string>
+	<key>supported_architectures</key>
+	<array>
+		<string>x86_64</string>
+	</array>
 	<key>unattended_install</key>
 	<true/>
 	<key>uninstall_method</key>
@@ -77,6 +81,6 @@
 	<key>uninstallable</key>
 	<true/>
 	<key>version</key>
-	<string>44.0</string>
+	<string>2.2.2</string>
 </dict>
 </plist>
