--- a/pkgsinfo/apps/GIMP/GIMP-2.8.16.plist
+++ b/pkgsinfo/apps/GIMP/GIMP-2.8.16.plist
@@ -23,6 +23,7 @@
 	<key>catalogs</key>
 	<array>
 		<string>testing</string>
+		<string>production</string>
 	</array>
 	<key>category</key>
 	<string>Image Manipulation</string>
