--- a/pkgsinfo/apps/adobe/AdobeAIR-20.0.0.260.plist
+++ b/pkgsinfo/apps/adobe/AdobeAIR-20.0.0.260.plist
@@ -7,11 +7,11 @@
 		<key>created_by</key>
 		<string>aanklewicz</string>
 		<key>creation_date</key>
-		<date>2016-01-07T14:14:48Z</date>
+		<date>2016-02-23T17:26:44Z</date>
 		<key>munki_version</key>
 		<string>2.4.0.2561</string>
 		<key>os_version</key>
-		<string>10.11</string>
+		<string>10.11.2</string>
 	</dict>
 	<key>autoremove</key>
 	<false/>
@@ -29,13 +29,13 @@
 	<key>display_name</key>
 	<string>Adobe® Integrated Runtime</string>
 	<key>installed_size</key>
-	<integer>129223</integer>
+	<integer>129231</integer>
 	<key>installer_item_hash</key>
-	<string>ee240a03042c8d33b95b188136ba9f1e3eb0641c716887f9178fbab8b498442e</string>
+	<string>4488709313e82a5a3de430425fb40cb5741eb160ea09f9e6bfa6d0e2214645e5</string>
 	<key>installer_item_location</key>
-	<string>apps/adobe/AdobeAIR-20.0.0.233__1.pkg</string>
+	<string>apps/adobe/AdobeAIR-20.0.0.260.pkg</string>
 	<key>installer_item_size</key>
-	<integer>55616</integer>
+	<integer>55620</integer>
 	<key>minimum_os_version</key>
 	<string>10.5.0</string>
 	<key>name</key>
@@ -44,11 +44,11 @@
 	<array>
 		<dict>
 			<key>installed_size</key>
-			<integer>129223</integer>
+			<integer>129231</integer>
 			<key>packageid</key>
 			<string>com.adobe.pkg.AIR</string>
 			<key>version</key>
-			<string>20.0.0.233</string>
+			<string>20.0.0.260</string>
 		</dict>
 	</array>
 	<key>unattended_install</key>
@@ -58,6 +58,6 @@
 	<key>uninstallable</key>
 	<true/>
 	<key>version</key>
-	<string>20.0.0.233</string>
+	<string>20.0.0.260</string>
 </dict>
 </plist>
