--- a/pkgsinfo/internet_plugins/AdobeFlashPlayer-20.0.0.306.plist
+++ b/pkgsinfo/internet_plugins/AdobeFlashPlayer-20.0.0.306.plist
@@ -7,11 +7,11 @@
 		<key>created_by</key>
 		<string>aanklewicz</string>
 		<key>creation_date</key>
-		<date>2016-01-07T14:14:48Z</date>
+		<date>2016-02-23T17:30:44Z</date>
 		<key>munki_version</key>
 		<string>2.4.0.2561</string>
 		<key>os_version</key>
-		<string>10.11</string>
+		<string>10.11.2</string>
 	</dict>
 	<key>autoremove</key>
 	<false/>
@@ -23,32 +23,34 @@
 	<key>category</key>
 	<string>Multimedia</string>
 	<key>description</key>
-	<string>The Adobe AIR runtime enables developers to package the same code into native applications and games for Windows and Mac OS desktops as well as iOS and Android devices, reaching over a billion desktop systems and mobile app stores for over 500 million devices.</string>
+	<string>Adobe® Flash® Player is a cross-platform browser-based application runtime that delivers uncompromised viewing of expressive applications, content, and videos across screens and browsers.</string>
 	<key>developer</key>
 	<string>Adobe</string>
 	<key>display_name</key>
-	<string>Adobe® Integrated Runtime</string>
+	<string>Adobe Flash Player</string>
 	<key>installed_size</key>
-	<integer>129223</integer>
+	<integer>17408</integer>
 	<key>installer_item_hash</key>
-	<string>ee240a03042c8d33b95b188136ba9f1e3eb0641c716887f9178fbab8b498442e</string>
+	<string>f95046ed8511401a50dfe5aadfc595769afdbed2c4db3aeb8ff7eabdc9c01452</string>
 	<key>installer_item_location</key>
-	<string>apps/adobe/AdobeAIR-20.0.0.233__1.pkg</string>
+	<string>internet_plugins/AdobeFlashPlayer-20.0.0.306.dmg</string>
 	<key>installer_item_size</key>
-	<integer>55616</integer>
+	<integer>16599</integer>
 	<key>minimum_os_version</key>
 	<string>10.5.0</string>
 	<key>name</key>
-	<string>AdobeAIR</string>
+	<string>AdobeFlashPlayer</string>
+	<key>package_path</key>
+	<string>Install Adobe Flash Player.app/Contents/Resources/Adobe Flash Player.pkg</string>
 	<key>receipts</key>
 	<array>
 		<dict>
 			<key>installed_size</key>
-			<integer>129223</integer>
+			<integer>17408</integer>
 			<key>packageid</key>
-			<string>com.adobe.pkg.AIR</string>
+			<string>com.adobe.pkg.FlashPlayer</string>
 			<key>version</key>
-			<string>20.0.0.233</string>
+			<string>20.0.0.306</string>
 		</dict>
 	</array>
 	<key>unattended_install</key>
@@ -58,6 +60,6 @@
 	<key>uninstallable</key>
 	<true/>
 	<key>version</key>
-	<string>20.0.0.233</string>
+	<string>20.0.0.306</string>
 </dict>
 </plist>
